--- a/FileExplorer/Controls/FileTreeViewControl.xaml
+++ b/FileExplorer/Controls/FileTreeViewControl.xaml
@@ -7,7 +7,7 @@
                      xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
                      xmlns:common="clr-namespace:FileExplorer.Core"
                      xmlns:controls="clr-namespace:FileExplorer.Controls"
-                     ShowBorder="False" ItemsSource="{Binding RootFolders}" CurrentItem="{Binding CurrentFolder}" FixedFilter="{Binding FilterCriteria}">
+                     ShowBorder="False" ItemsSource="{Binding RootFolders}" CurrentItem="{Binding CurrentFolder, Converter={common:NonNullValueConverter}}" FixedFilter="{Binding FilterCriteria}">
 
     <dxmvvm:Interaction.Behaviors>
         <common:NativeContextMenuBehavior />
@@ -26,6 +26,14 @@
             <dxg:TreeListColumn.CellStyle>
                 <Style TargetType="dxg:LightweightCellEditor">
                     <Setter Property="ToolTip" Value="{Binding RowData.Row.FullPath}" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding RowData.Row.IsRoot}" Value="True">
+                            <Setter Property="ToolTip" Value="{Binding RowData.Row.Name}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding RowData.Row.IsDrive}" Value="True">
+                            <Setter Property="ToolTip" Value="{Binding RowData.Row.Name}" />
+                        </DataTrigger>
+                    </Style.Triggers>                    
                 </Style>
             </dxg:TreeListColumn.CellStyle>
         </dxg:TreeListColumn>
