--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -3,8 +3,7 @@
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
                  xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-                 xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-                 xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
+                 xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"                 
                  xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
                  xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
                  xmlns:dxfui="http://schemas.devexpress.com/winfx/2008/xaml/core/filteringui"
@@ -56,24 +55,24 @@
             </Setter>
         </Style>
         <Style x:Key="CardViewBorderStyle" TargetType="Border">
-            <Setter Property="Background" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=BorderNoneBrush}}" />
-            <Setter Property="TextBlock.Foreground" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=TextUnfocusedBrush}}" />
+            <Setter Property="Background" Value="{DynamicResource {dxgt:LWKey GridRow.BorderNoneBrush}}" />
+            <Setter Property="TextBlock.Foreground" Value="{DynamicResource {dxgt:LWKey GridRow.TextUnfocusedBrush}}" />
             <Style.Triggers>
                 <MultiTrigger>
                     <MultiTrigger.Conditions>
                         <Condition Property="IsMouseOver" Value="True" />
                         <Condition Property="dxg:CardView.IsFocusedRow" Value="False" />
                     </MultiTrigger.Conditions>
-                    <Setter Property="Background" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=BorderSelectedBrush}}" />
-                    <Setter Property="TextBlock.Foreground" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=TextRowSelectedBrush}}"/>
+                    <Setter Property="Background" Value="{DynamicResource {dxgt:LWKey GridRow.BorderSelectedBrush}}" />
+                    <Setter Property="TextBlock.Foreground" Value="{DynamicResource {dxgt:LWKey GridRow.TextRowSelectedBrush}}"/>
                 </MultiTrigger>
                 <DataTrigger Binding="{Binding IsSelected}" Value="True">
-                    <Setter Property="Background" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=BorderFocusedBrush}}" />
-                    <Setter Property="TextBlock.Foreground" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=TextFocusedBrush}}"/>
+                    <Setter Property="Background" Value="{DynamicResource {dxgt:LWKey GridRow.BorderFocusedBrush}}" />
+                    <Setter Property="TextBlock.Foreground" Value="{DynamicResource {dxgt:LWKey GridRow.TextFocusedBrush}}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding IsFocused}" Value="True">
-                    <Setter Property="Background" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=BorderFocusedBrush}}" />
-                    <Setter Property="TextBlock.Foreground" Value="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=TextFocusedBrush}}"  />
+                    <Setter Property="Background" Value="{DynamicResource {dxgt:LWKey GridRow.BorderFocusedBrush}}" />
+                    <Setter Property="TextBlock.Foreground" Value="{DynamicResource {dxgt:LWKey GridRow.TextFocusedBrush}}"  />
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -154,11 +153,11 @@
                 <dxe:TextEdit Name="PART_Editor" Style="{StaticResource FileNameEditStyle}" />
             </StackPanel>
         </DataTemplate>
-        <ControlTemplate x:Key="{dxgt:GridCardThemeKey ResourceKey=ContainerTemplate}" TargetType="{x:Type ContentControl}">
+        <ControlTemplate x:Key="{dxgt:LWKey GridCard.ContainerTemplate}" TargetType="{x:Type ContentControl}">
             <ContentPresenter />
         </ControlTemplate>
         <ControlTemplate x:Key="FocusedRowBorderTemplate">
-            <Border BorderThickness="1" BorderBrush="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=BorderFocusedBrush}}" />
+            <Border BorderThickness="1" BorderBrush="{DynamicResource {dxgt:LWKey GridRow.BorderFocusedBrush}}" />
         </ControlTemplate>
         <ControlTemplate x:Key="FocusedCardBorderTemplate" />
         <controls:TableViewEx x:Key="ListView" AllowEditing="False" AllowMergedGrouping="True" AllowConditionalFormattingMenu="True"
@@ -192,7 +191,9 @@
             </dxg:TableView.ColumnMenuCustomizations>
             <dxg:TableView.RowIndicatorContentTemplate>
                 <DataTemplate>
-                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Text="{Binding RowHandle.Value, Converter={common:RowHandleToRowNumberConverter}}" />
+                    <Border Background="{LWThemeValue Brush.Editor.Background}">
+                        <TextBlock VerticalAlignment="Center" TextAlignment="Center" Text="{Binding RowHandle.Value, Converter={common:RowHandleToRowNumberConverter}}" />
+                    </Border>
                 </DataTemplate>
             </dxg:TableView.RowIndicatorContentTemplate>
         </controls:TableViewEx>
