--- a/FileExplorer/Resources/ThemeOffice2019Colorful.xaml
+++ b/FileExplorer/Resources/ThemeOffice2019Colorful.xaml
@@ -1,13 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
-                    xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys">
+                    xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys"
+                    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys">
 
     <DataTemplate x:Key="{dxt:LWKey DXTabItem.SelectedBackground}">
         <dxi:TabBorder ViewInfo="{Binding}" BackgroundMode="BorderBackground" BorderMode="BorderBrush"
                        BorderThickness="1,1,1,0" BorderMargin="0,-1,1,-1" HoldBorderThickness="2" HoldBorderMargin="0,0,2,2"
-                       BorderBrush="{DynamicResource {dxt:LWKey FlyoutControl.BorderBrush}}"
-                       BorderBackground="{DynamicResource {dxt:LWKey FlyoutControl.Background}}" />
+                       BorderBrush="{LWThemeValue Brush.Border}" BorderBackground="{LWThemeValue Brush.Control.Background}" />
     </DataTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.RowOffsetControlTemplate}" />
 
 </ResourceDictionary>
