--- a/FileExplorer/Resources/ThemeVS2019Dark.xaml
+++ b/FileExplorer/Resources/ThemeVS2019Dark.xaml
@@ -1,9 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
                     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
                     xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
                     xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
-                    xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys">
+                    xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys"
+                    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys">
 
     <Style TargetType="{x:Type dxb:BarCheckItem}">
         <Style.Triggers>
@@ -23,8 +26,19 @@
     <DataTemplate x:Key="{dxt:LWKey DXTabItem.SelectedBackground}">
         <dxi:TabBorder ViewInfo="{Binding}" BackgroundMode="BorderBackground" BorderMode="BorderBrush"
                        BorderThickness="1,1,1,0" BorderMargin="0,-1,1,-1" HoldBorderThickness="2" HoldBorderMargin="0,0,2,2"
-                       BorderBrush="{LWThemeValue Brush.Border}"
-                       BorderBackground="{LWThemeValue Brush.Window.Background}" />
+                       BorderBrush="{LWThemeValue Brush.Border}" BorderBackground="{LWThemeValue Brush.Window.Background}" />
     </DataTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.RowIndicatorTemplate}" TargetType="{x:Type dxg:RowIndicator}">
+        <dx:DXBorder x:Name="PART_ContentBorder" BorderThickness="0,0,1,0"
+                     BorderBrush="{LWThemeValue Brush.Border}" Background="{LWThemeValue Brush.Control.Background}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.GroupRowIndicatorTemplate}" TargetType="{x:Type dxg:RowIndicator}">
+        <dx:DXBorder x:Name="PART_ContentBorder" BorderThickness="0,0,1,0"
+                     BorderBrush="{LWThemeValue Brush.Border}" Background="{LWThemeValue Brush.Control.Background}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.RowOffsetControlTemplate}" />
 
 </ResourceDictionary>
