--- a/FileExplorer/Resources/ThemeWin10Dark.xaml
+++ b/FileExplorer/Resources/ThemeWin10Dark.xaml
@@ -1,18 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
                     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
                     xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
                     xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
                     xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys"
+                    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
                     xmlns:dxrt="http://schemas.devexpress.com/winfx/2008/xaml/ribbon/themekeys">
 
-    <Style TargetType="{x:Type dxb:BarCheckItem}">
-        <Style.Triggers>
-            <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="{DynamicResource {dxt:LWKey TextEdit.SelectionBrush}}" />
-            </Trigger>
-        </Style.Triggers>
-    </Style>
+    <SolidColorBrush x:Key="{dxgt:LWKey CardView.Background}" Color="{LWThemeValue Color.Control.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey TableView.DataPresenterBackground}" Color="{LWThemeValue Color.Control.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey TreeListView.RowMarginBackgroundBrush}" Color="{LWThemeValue Color.Control.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridColumnHeader.Background}" Color="{LWThemeValue Color.Button.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridColumnHeader.BorderBrush}" Color="{LWThemeValue Color.Border}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridRow.BorderNoneBrush}" Color="{LWThemeValue Color.Control.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridRow.FixedSummaryFillBrush}" Color="{LWThemeValue Color.Control.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridRow.TotalSummaryBorderBrush}" Color="{LWThemeValue Color.Border}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GroupRow.GroupRowBackground}" Color="{LWThemeValue Color.Button.Background}" />
 
     <Style TargetType="{x:Type dxr:RibbonPageCaptionControl}">
         <Setter Property="BorderTemplate" Value="{StaticResource CaptionBorderTemplate}" />
@@ -24,9 +29,8 @@
     <DataTemplate x:Key="{dxt:LWKey DXTabItem.SelectedBackground}">
         <dxi:TabBorder ViewInfo="{Binding}" BackgroundMode="BorderBackground" BorderMode="BorderBrush"
                        BorderThickness="1,1,1,0" BorderMargin="0,-1,1,-1" HoldBorderThickness="2" HoldBorderMargin="0,0,2,2"
-                       BorderBrush="{LWThemeValue Brush.Border}"
-                       BorderBackground="{LWThemeValue Brush.Control.Background}" />
-    </DataTemplate>
+                       BorderBrush="{LWThemeValue Brush.Border}" BorderBackground="{LWThemeValue Brush.Control.Background}" />
+    </DataTemplate>    
 
     <ControlTemplate x:Key="{dxrt:LWKey Ribbon.TabPartBorderTemplate}" TargetType="{x:Type ContentControl}">
         <Grid Name="Root" MinHeight="32">
@@ -43,5 +47,25 @@
                     Background="{LWThemeValue Brush.Control.Background}" />
         </Grid>
     </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.RowIndicatorTemplate}" TargetType="{x:Type dxg:RowIndicator}">
+        <dx:DXBorder x:Name="PART_ContentBorder" BorderThickness="0,0,1,0"
+                     BorderBrush="{LWThemeValue Brush.Border}" Background="{LWThemeValue Brush.Control.Background}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.GroupRowIndicatorTemplate}" TargetType="{x:Type dxg:RowIndicator}">
+        <dx:DXBorder x:Name="PART_ContentBorder" BorderThickness="0,0,1,0"
+                     BorderBrush="{LWThemeValue Brush.Border}" Background="{LWThemeValue Brush.Control.Background}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.RowOffsetControlTemplate}" />
+
+    <Style TargetType="{x:Type dxb:BarCheckItem}">
+        <Style.Triggers>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="Background" Value="{DynamicResource {dxt:LWKey TextEdit.SelectionBrush}}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 
 </ResourceDictionary>
