--- a/FileExplorer/Resources/ThemeWin11Dark.xaml
+++ b/FileExplorer/Resources/ThemeWin11Dark.xaml
@@ -1,40 +1,68 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
                     xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
                     xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys"
-                    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-                    xmlns:dxrt="http://schemas.devexpress.com/winfx/2008/xaml/ribbon/themekeys">
+                    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys">
 
     <SolidColorBrush x:Key="{dxgt:LWKey CardView.Background}" Color="{LWThemeValue Color.WindowBackground}" />
     <SolidColorBrush x:Key="{dxgt:LWKey TableView.DataPresenterBackground}" Color="{LWThemeValue Color.WindowBackground}" />
     <SolidColorBrush x:Key="{dxgt:LWKey TreeListView.RowMarginBackgroundBrush}" Color="{LWThemeValue Color.WindowBackground}" />
     <SolidColorBrush x:Key="{dxgt:LWKey GridColumnHeader.Background}" Color="{LWThemeValue Color.Editor.Background}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridColumnHeader.BorderBrush}" Color="{LWThemeValue Color.PanelBorder}" />
     <SolidColorBrush x:Key="{dxgt:LWKey GridRow.BorderNoneBrush}" Color="{LWThemeValue Color.WindowBackground}" />
     <SolidColorBrush x:Key="{dxgt:LWKey GridRow.FixedSummaryFillBrush}" Color="{LWThemeValue Color.WindowBackground}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GridRow.TotalSummaryBorderBrush}" Color="{LWThemeValue Color.PanelBorder}" />
+    <SolidColorBrush x:Key="{dxgt:LWKey GroupRow.GroupRowBackground}" Color="{LWThemeValue Color.Editor.Background}" />
+
+    <ControlTemplate x:Key="{dxgt:LWKey TableView.GroupPanelContentTemplate}" TargetType="{x:Type dxg:GroupPanelControl}">
+        <dx:MeasurePixelSnapper>
+            <Border x:Name="GroupPanelBorder" BorderBrush="Transparent" BorderThickness="0" Background="{LWThemeValue Brush.WindowBackground}">
+                <Grid Margin="{DynamicResource {dxgt:LWKey TableView.GroupPanelMargin}}">
+                    <TextBlock x:Name="PART_GroupPanelDragText" Style="{DynamicResource {dxgt:LWKey TableView.GroupPanelDragTextStyle}}">
+                        <TextBlock.Text>
+                            <Binding ConverterParameter="GridGroupPanelText" Path="View.LocalizationDescriptor" RelativeSource="{RelativeSource TemplatedParent}">
+                                <Binding.Converter>
+                                    <dxg:DynamicLocalizationStringValueConvertor />
+                                </Binding.Converter>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                    <dxg:GroupPanelContainer Margin="{DynamicResource {dxgt:LWKey TableView.GroupPanelSeparatorMargin}}" View="{TemplateBinding View}"/>
+                </Grid>
+            </Border>
+        </dx:MeasurePixelSnapper>
+    </ControlTemplate>
 
     <DataTemplate x:Key="{dxt:LWKey DXTabItem.SelectedBackground}">
         <dxi:TabBorder ViewInfo="{Binding}" BackgroundMode="BorderBackground" BorderMode="BorderBrush"
                        BorderThickness="1,1,1,0" BorderMargin="0,-1,1,-1" HoldBorderThickness="2" HoldBorderMargin="0,0,2,2"
                        BorderCornerRadius="4,4,0,0" HoldBorderCornerRadius="4"
-                       BorderBrush="{LWThemeValue Brush.PanelBorder}"
-                       BorderBackground="{LWThemeValue Brush.FlyoutBackground}" />
-    </DataTemplate>
+                       BorderBrush="{LWThemeValue Brush.PanelBorder}" BorderBackground="{LWThemeValue Brush.WindowBackground}" />
+    </DataTemplate>    
 
-    <ControlTemplate x:Key="{dxrt:LWKey Ribbon.TabPartBorderTemplate}" TargetType="{x:Type ContentControl}">
-        <Grid Name="Root" MinHeight="32">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Border x:Name="CategoryBackground" Grid.Row="0" MinHeight="32"
-                    Background="{LWThemeValue Brush.FlyoutBackground}" />
-            <Border x:Name="SeparatorBackground" Grid.Row="1" Height="1"
-                    Background="{LWThemeValue Brush.FlyoutBackground}" />
-            <Border x:Name="PageHeaderBackground" Grid.Row="2"
-                    Background="{LWThemeValue Brush.FlyoutBackground}" />
-        </Grid>
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.RowIndicatorTemplate}" TargetType="{x:Type dxg:RowIndicator}">
+        <dx:DXBorder x:Name="PART_ContentBorder" BorderThickness="0,0,1,0"
+                     BorderBrush="{LWThemeValue Brush.PanelBorder}" Background="{LWThemeValue Brush.WindowBackground}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey RowIndicator.GroupRowIndicatorTemplate}" TargetType="{x:Type dxg:RowIndicator}">
+        <dx:DXBorder x:Name="PART_ContentBorder" BorderThickness="0,0,1,1"
+                     BorderBrush="{LWThemeValue Brush.PanelBorder}" Background="{LWThemeValue Brush.WindowBackground}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="{dxgt:LWKey GridControl.BorderTemplate}" TargetType="{x:Type ContentControl}">
+        <Border BorderBrush="{LWThemeValue Brush.PanelBorder}">
+            <Border.BorderThickness>
+                <Binding Path="(dxg:GridBorderHelper.ShowBorder)" RelativeSource="{RelativeSource TemplatedParent}">
+                    <Binding.Converter>
+                        <dx:BoolToObjectConverter FalseValue="0" TrueValue="1" />
+                    </Binding.Converter>
+                </Binding>
+            </Border.BorderThickness>
+            <ContentPresenter />
+        </Border>
     </ControlTemplate>
 
 </ResourceDictionary>
