--- a/FileExplorer/View/CustomColumnView.xaml
+++ b/FileExplorer/View/CustomColumnView.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-             xmlns:dxd="clr-namespace:DevExpress.Data;assembly=DevExpress.Data.v25.1"
+             
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
              xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
@@ -15,9 +15,9 @@
         </dxlc:LayoutItem>
         <dxlc:LayoutItem Label="{Binding ColumnType, Source={StaticResource ResourceProvider}}">
             <dxe:ComboBoxEdit EditValue="{Binding UnboundType}">
-                <dxmvvm:Interaction.Behaviors>
+                <!--<dxmvvm:Interaction.Behaviors>
                     <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type dxd:UnboundColumnType}" />
-                </dxmvvm:Interaction.Behaviors>
+                </dxmvvm:Interaction.Behaviors>-->
             </dxe:ComboBoxEdit>
         </dxlc:LayoutItem>
         <dxlc:LayoutItem Label="{Binding Expression, Source={StaticResource ResourceProvider}}">
