--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -12,7 +12,7 @@
                  xmlns:common="clr-namespace:FileExplorer.Core"
                  xmlns:controls="clr-namespace:FileExplorer.Controls"
                  xmlns:settings="clr-namespace:FileExplorer.Properties"
-                 SelectionMode="Row" AutoExpandAllGroups="True" AllowInitiallyFocusedRow="False" ShowLoadingPanel="{Binding IsLoading}" ClipboardCopyMode="None"
+                 SelectionMode="Row" AutoExpandAllGroups="True" AllowInitiallyFocusedRow="False" ClipboardCopyMode="None"
                  dx:DXSerializer.StoreLayoutMode="All" dxg:GridSerializationOptions.AddNewColumns="False" dxg:GridSerializationOptions.RemoveOldColumns="False">
 
     <dxg:GridControl.Resources>
@@ -191,6 +191,8 @@
                 <dxb:BarButtonItem Content="{Binding CopyAllColumns, Source={StaticResource ResourceProvider}}" dxb:BarItemLinkActionBase.ItemLinkIndex="2"
                                    Command="{DXCommand 'DataControl.CopySelectedRowsToClipboard()'}" />
                 <dxb:BarItemSeparator dxb:BarItemLinkActionBase.ItemLinkIndex="3" />
+                <dxb:BarCheckItem Content="{Binding UnifiedSorting, Source={StaticResource ResourceProvider}}" dxb:BarItemLinkActionBase.ItemLinkIndex="7"
+                                  IsChecked="{Binding LocalSettings.UnifiedSorting, RelativeSource={RelativeSource AncestorType=controls:FileListViewControl}}" />
             </dxg:TableView.ColumnMenuCustomizations>
             <dxg:TableView.RowIndicatorContentTemplate>
                 <DataTemplate>
@@ -211,6 +213,10 @@
                 <common:SortOrderOnHeaderClickBehavior />
                 <common:DragDropFilesBehavior CurrentFolderPath="{Binding CurrentFolder.FullPath}" />
             </dxmvvm:Interaction.Behaviors>
+            <dxg:CardView.ColumnMenuCustomizations>
+                <dxb:BarCheckItem Content="{Binding UnifiedSorting, Source={StaticResource ResourceProvider}}" dxb:BarItemLinkActionBase.ItemLinkIndex="3"
+                                  IsChecked="{Binding LocalSettings.UnifiedSorting, RelativeSource={RelativeSource AncestorType=controls:FileListViewControl}}" />
+            </dxg:CardView.ColumnMenuCustomizations>
         </controls:CardViewEx>
         <controls:TreeViewEx x:Key="TreeView" AllowEditing="False" AllowConditionalFormattingMenu="True"
                              AllowDragDrop="True" AllowSortedDataDragDrop="True" DragDropHintTemplate="{StaticResource DragDropHintTemplate}"                                    
@@ -239,6 +245,8 @@
                 <dxb:BarButtonItem Content="{Binding CopyAllColumns, Source={StaticResource ResourceProvider}}" dxb:BarItemLinkActionBase.ItemLinkIndex="2"
                                    Command="{DXCommand 'DataControl.CopySelectedRowsToClipboard()'}" />
                 <dxb:BarItemSeparator dxb:BarItemLinkActionBase.ItemLinkIndex="3" />
+                <dxb:BarCheckItem Content="{Binding UnifiedSorting, Source={StaticResource ResourceProvider}}" dxb:BarItemLinkActionBase.ItemLinkIndex="7"
+                                  IsChecked="{Binding LocalSettings.UnifiedSorting, RelativeSource={RelativeSource AncestorType=controls:FileListViewControl}}" />
             </dxg:TreeListView.ColumnMenuCustomizations>
         </controls:TreeViewEx>
         <DXDataTemplateSelector x:Key="FileSizeTemplateSelector">
@@ -279,7 +287,6 @@
     </dxg:GridControl.Style>
 
     <dxmvvm:Interaction.Behaviors>
-        <common:FileModelSortBehavior />
         <common:FileModelGroupBehavior />
         <common:NativeContextMenuBehavior CurrentFolder="{Binding CurrentFolder}" />
         <common:MouseEventToCommand MouseButton="Middle" Event="PreviewMouseDown" PassEventArgsToCommand="True" 
